<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="Service_Cart" Id="{e44148bd-ae7e-4ad6-bc02-09b1c464fbfb}">
    <Declaration><![CDATA[TYPE Service_Cart : 
	STRUCT
		EN1000_HEALTHY : BOOL := 0;

		// E-Stop Components
		DV1052_SMR : BOOL;
		PB1056_E_STOP_PB : BOOL;
		
		// HMI
		DV1146_TS : Touchscreen;
		
	// Actuators/Motors
		// POSITIONING TOOL
		DV1150_TRANSX_DRIVE : Motion_Axis;
		DV1175_TRANSY_DRIVE : Motion_Axis;
		DV1151_JACK1_DRIVE : Motion_Axis;
		DV1275_JACK2_DRIVE : Motion_Axis;
		DV1301_JACK3_DRIVE : Motion_Axis;
		DV1325_POS_TOOL_ROTZ_DRIVE : Motion_Axis;
		
		// MONITORING TOOL
		RIO1135_MON_TOOL_ROTZ_DRIVE : Motion_Axis;
		
	// Sensors
		//DV1459_MON_TOOL_ROTZ_RESOLVER : Analog_In_Var;
	
		DV1375_LOAD_CELL_JACK1_FZ : Analog_In_Var;
		DV1379_LOAD_CELL_JACK2_FZ : Analog_In_Var;
		DV1385_LOAD_CELL_JACK3_FZ : Analog_In_Var;
		
		DV1390_TILT_SENSOR1 : Analog_In_Var;
		DV1396_TILT_SENSOR2 : Analog_In_Var;
		
	// Selector Switches & Push Buttons
		// POSITIONING TOOL
		SS1338_POS_TOOL_ROTZ_POS : BOOL;
		SS1338_POS_TOOL_ROTZ_NEG : BOOL;
		SS1157_TRANSX_POS : BOOL;
		SS1157_TRANSX_NEG : BOOL;
		SS1182_TRANSY_POS : BOOL;
		SS1182_TRANSY_NEG : BOOL;
		SS1264_ALL_JACKS_TRANSZ_POS: BOOL;
		SS1264_ALL_JACKS_TRANSZ_NEG : BOOL;
		SS1307_JACK1_TRANSZ_POS : BOOL;
		SS1307_JACK1_TRANSZ_NEG : BOOL;
		SS1312_JACK2_TRANSZ_POS : BOOL;
		SS1312_JACK2_TRANSZ_NEG : BOOL;
		SS1324_JACK3_TRANSZ_POS : BOOL;
		SS1324_JACK3_TRANSZ_NEG : BOOL;
		SS1273_TILT_ROTX_POS: BOOL;
		SS1273_TILT_ROTX_NEG : BOOL;
		SS1282_TILT_ROTY_POS: BOOL;
		SS1282_TILT_ROTY_NEG : BOOL;
		
		// MONITORING TOOL
		SS1457_MON_TOOL_ROTZ_POS : BOOL;
		SS1457_MON_TOOL_ROTZ_NEG : BOOL;
		SS1709_OUTRIGGERS_EXTEND : BOOL;
		SS1704_MAGNET_RETRACT : BOOL;
		SS1704_MAGNET_EXTEND : BOOL;
		
		// RELAYS
		//CR1704_MAGNET_RETRACT : BOOL;
		//CR1706_MAGNET_EXTEND : BOOL;
		//CR1709_OUTRIGGER_EXTEND : BOOL;
		//CR1712_OUTRIGGER_RETRACT : BOOL;
		
		// Limit Switches
		LS1352_JACK1_EOT_POS : BOOL;
		LS1354_JACK1_EOT_NEG : BOOL;
		LS1357_JACK2_EOT_POS : BOOL;
		LS1359_JACK2_EOT_NEG : BOOL;
		LS1362_JACK3_EOT_POS : BOOL;
		LS1364_JACK3_EOT_NEG : BOOL;
		LS1367_POS_TOOL_ROTZ_EOT_POS : BOOL;
		LS1369_POS_TOOL_ROTZ_EOT_NEG : BOOL;
		
	END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>